--- a/app/style/scss/_sect_five.scss
+++ b/app/style/scss/_sect_five.scss
@@ -34,21 +34,22 @@
 			transform: translate(45%, 10%);
 		}
 		.img_cont{
+			margin-left: 3rem;
 			.overlay{
 				position: absolute;
-//				top: 0;
-//				bottom: 0;
-//				left: 0;
-//				right: 0;
-//				height: 100%;
-//				width: 100%;
-//				opacity: 1;
+				top: 0;
+				bottom: 0;
+				left: 0;
+				right: 0;
+				height: 100%;
+				width: 100%;
+				opacity: 1;
 //				background: url('../../img/hex4.png') no-repeat;
 				.overlay_text{
 					position: absolute;
-//					color: $white;
-//					@extend %USHText;
-//					font-size: 0.875em;
+					color: $white;
+					@extend %USHText;
+					font-size: 0.875em;
 					.ov_txt{
 						@extend %PTSansText;
 						font-size: 0.75em;
@@ -65,6 +66,7 @@
 				margin: -53% 10%;
 			}
 			.hex_tb_4{
+				position: relative;
 				margin: 3% 122%;
 			}
 				
