--- a/app/style/scss/_fonts.scss
+++ b/app/style/scss/_fonts.scss
@@ -36,12 +36,20 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'Uni SansB';
+    src: local('Uni Sans Bold'), local('UniSansBold'),
+        url('../../fonts/UniSansBold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+}
 //PT Sans
 
 @font-face {
     font-family:'PT Sans';
-    src: url('PT Sans.woff2') format('woff2'),
-		url('PT Sans.woff') format('woff');
+    src: url('../../fonts/PT Sans.woff2') format('woff2'),
+		url('../../fonts/PT Sans.woff') format('woff');
     font-weight: 400;
     font-style: normal;
     font-stretch: normal;
@@ -50,8 +58,8 @@
 
 @font-face {
     font-family:'PT Sans';
-    src: url('PT Sans Bold.woff2') format('woff2'),
-		url('PT Sans Bold.woff') format('woff');
+    src: url('../../fonts/PT Sans Bold.woff2') format('woff2'),
+		url('../../fonts/PT Sans Bold.woff') format('woff');
     font-weight: 700;
     font-style: normal;
     font-stretch: normal;
@@ -62,7 +70,7 @@
 
 @font-face {
     font-family:'o';
-    src: url('o Condensed.woff2') format('woff2'),
+    src: url('../../fonts/o Condensed.woff2') format('woff2'),
 		url('o Condensed.woff') format('woff');
     font-weight: 400;
     font-style: normal;
@@ -72,8 +80,8 @@
 
 @font-face {
     font-family:'o';
-    src: url('o Light.woff2') format('woff2'),
-		url('o Light.woff') format('woff');
+    src: url('../../fonts/o Light.woff2') format('woff2'),
+		url('../../fonts/o Light.woff') format('woff');
     font-weight: 300;
     font-style: normal;
     font-stretch: normal;
