--- a/app/style/scss/_main.scss
+++ b/app/style/scss/_main.scss
@@ -50,6 +50,15 @@
 					position: absolute;
 					transform: translate(15%, -189%);
 				}
+				@include md{
+					display: none;
+				}
+				@include sm{
+					display: none;
+				}
+				@include xs{
+					display: none;
+				}
 			}
 			&:hover{
 				color: $orange;
@@ -105,6 +114,7 @@
 }
 
 .main_sect{
+	height: 100vh;
 	.main_sect_container{
 		.ball_con{
 			margin-top: 200px;
@@ -115,12 +125,27 @@
 			@include md{
 				margin-top: -100px;
 			}
+			@include xs{
+				margin-top: -37px;
+			}
 			.ball{
 				margin-left: 12px;
 				@include md{
 					animation: none;
 					opacity: 0.6;
 
+				}
+				@include lg{
+					animation: none;
+					opacity: 0.75;
+				}
+				@include sm{
+					animation: none;
+					opacity: 0.6;
+				}
+				@include xs{
+					animation: none;
+					opacity: 0.6;
 				}
 			}
 			.ball_1{
@@ -156,6 +181,11 @@
     			margin-left: 388px;
     			font-size: 1.86em;
 			}
+			@include lg{
+				margin-top: -6%;
+    			margin-left: 63%;
+    			font-size: 1.612em;
+			}
 		}
 		.info_about{
 			margin-left: 93px;
@@ -169,8 +199,13 @@
 					transform: translate(-24%, 129%);
 					@include paddingLR(15px, 15px);
 				}
+				@include lg{
+					margin-top: 198px;
+					@include paddingLR(20px, 20px);
+				}
 
 			.info_tittle{
+				@extend %USHText;
 				margin-bottom: 45px;
 				font-size: 1.875em;
 				@include md{
@@ -181,6 +216,7 @@
 
 			}
 			.info_about_text{
+				@extend %USBText;
 				height: 140px;
 				overflow-x: hidden;
     			overflow-y: scroll;
@@ -193,6 +229,9 @@
 			.info_btn{
 				@include md{
 					margin: -16px 79px;
+				}
+				@include lg{
+					margin: 2% 29%;
 				}
 			}
 		}
