--- a/app/style/scss/_sect_five.scss
+++ b/app/style/scss/_sect_five.scss
@@ -1,4 +1,5 @@
 .sect_five{
+	height: 100vh;
 	background: url('../../img/sect_five_bg.jpg');
 	overflow: hidden;
 	.sect_five_cont{
@@ -19,13 +20,14 @@
 			margin-right: 60px;
 		}
 		.t_hex_info{
-			@extend %USHText;
+			@extend %USBText;
 			color: $white;
 			font-size: 0.875em;
 			margin-top: -5px;
 			@include paddingLR(66px, 66px);
 			text-align: center;
 			.hex_tittle{
+				@extend %USHText;
 				margin-bottom: 26px;
 				font-size: 1.875em;
 			}
