--- a/app/style/scss/_footer.scss
+++ b/app/style/scss/_footer.scss
@@ -4,9 +4,13 @@
 	font-size: 0.75em;
 	text-transform: uppercase;
 	@extend %RobotoText;
+	height: 100vh;
+//	position: absolute;
+//	bottom: 0;
+//	width: 100%;
 	.footer_cont{
 		position: relative;
-		
+		margin-top: 100px;
 		.f_menu{
 			text-transform: uppercase;
 			display: flex;
@@ -65,5 +69,9 @@
 	.join_us{
 		bottom: 10%;
     	right: 8%;
+	}
+	
+	.fp-tableCell {
+		vertical-align: inherit;
 	}
 }
