--- a/app/style/scss/_sect_five.scss
+++ b/app/style/scss/_sect_five.scss
@@ -35,6 +35,9 @@
 		}
 		.img_cont{
 			margin-left: 3rem;
+			@include lg {
+				margin-left: -2rem;
+			}
 			.overlay{
 				position: absolute;
 				top: 0;
@@ -76,3 +79,4 @@
 		}
 	}
 }
+
