--- a/app/style/scss/_sect_two.scss
+++ b/app/style/scss/_sect_two.scss
@@ -5,7 +5,7 @@
 	color: $white;
 	overflow: hidden;
 	.sect_two_container{
-		display: grid;
+		margin-top: 100px;
 		position: relative;
 		.hexagon{
 			&:before, &:after{
