--- a/app/style/scss/_sect_four.scss
+++ b/app/style/scss/_sect_four.scss
@@ -2,7 +2,7 @@
 	height: 100vh;
 	color: $white;
 	@extend %USBText;
-	background: url('../../img/sect_four_bg.jpg');
+	background: url('../../img/sect_four_bg.jpg') no-repeat;
 	position: center center;
 	overflow: hidden;
 	.sect_four_cont{
@@ -16,9 +16,12 @@
 		.hex_2{
 			margin-top: 20%;
 			margin-left: 93px;
+			.hex_tittle{
+				@extend %USHText;
+			}
 		}
 		.hex_1{
-			.hex_title{
+			.hex_tittle{
 				@extend %USHText;
 				font-size: 1.5em;
 			}
@@ -26,6 +29,8 @@
 			margin-left: 35px;
 		}
 		.hex_4{
+			.hex_tittle{@extend %USHText;
+			}
 			transform: translate(130%, -48%);
 		}
 		.t_hex_info{
