--- a/app/style/css/style.css
+++ b/app/style/css/style.css
@@ -403,7 +403,8 @@ html {
       -webkit-align-items: flex-end;
           -ms-flex-align: end;
               align-items: flex-end;
-      list-style: none; }
+      list-style: none;
+      opacity: 0; }
       @media (min-width: 768px) and (max-width: 991px) {
         .main_sect .main_sect_container .ball_con {
           margin-top: -100px; } }
@@ -434,16 +435,22 @@ html {
             opacity: 0.6; } }
       .main_sect .main_sect_container .ball_con .ball_1 {
         margin-right: 23px;
-        margin-left: 57px; }
+        margin-left: 57px;
+        opacity: 0; }
+      .main_sect .main_sect_container .ball_con .ball_2 {
+        opacity: 0; }
       .main_sect .main_sect_container .ball_con .ball_3 {
         margin-bottom: -28px;
-        margin-left: 38px; }
+        margin-left: 38px;
+        opacity: 0; }
       .main_sect .main_sect_container .ball_con .ball_4 {
         margin-bottom: -88px;
-        margin-left: 27px; }
+        margin-left: 27px;
+        opacity: 0; }
       .main_sect .main_sect_container .ball_con .ball_5 {
         margin-bottom: -229px;
-        margin-left: -2px; }
+        margin-left: -2px;
+        opacity: 0; }
     .main_sect .main_sect_container .main_tittle {
       margin-top: 23%;
       margin-left: 76px;
