--- a/app/style/scss/_variabless.scss
+++ b/app/style/scss/_variabless.scss
@@ -275,7 +275,9 @@ a{
     overflow-y: scroll;
 }
 .hex_text::-webkit-scrollbar {width:0px;}
-
+.container {
+	height: 100%!important;
+}
 #preloader{
 	background: $black;
 	width: 100vw;
