--- a/app/style/css/style.css
+++ b/app/style/css/style.css
@@ -185,6 +185,9 @@ a {
 .hex_text::-webkit-scrollbar {
   width: 0px; }
 
+.container {
+  height: 100% !important; }
+
 #preloader {
   background: #000000;
   width: 100vw;
@@ -785,10 +788,19 @@ html {
   color: #ffffff;
   overflow: hidden; }
   .sect_two .sect_two_container {
-    margin-top: 100px;
     position: relative; }
+    @media (min-width: 992px) and (max-width: 1199px) {
+      .sect_two .sect_two_container {
+        max-width: 100vw; } }
+    @media (min-width: 992px) and (max-width: 1199px) {
+      .sect_two .sect_two_container .hexagon {
+        width: 409px; } }
     .sect_two .sect_two_container .hexagon:before, .sect_two .sect_two_container .hexagon:after {
       margin-left: 0%; }
+      @media (min-width: 992px) and (max-width: 1199px) {
+        .sect_two .sect_two_container .hexagon:before, .sect_two .sect_two_container .hexagon:after {
+          border-left: 205px solid transparent;
+          border-right: 205px solid transparent; } }
     .sect_two .sect_two_container .hexagon .info_btn {
       margin: 10% 34%; }
     .sect_two .sect_two_container .sect_two_hex_1 {
@@ -847,6 +859,9 @@ html {
             height: 110px; } }
       .sect_two .sect_two_container .sect_two_hex_4 .info_btn {
         margin: -1% 34%; }
+    @media (min-width: 992px) and (max-width: 1199px) {
+      .sect_two .sect_two_container .main_nav {
+        right: 1vw; } }
     .sect_two .sect_two_container .sect_two_info {
       margin-top: -5px;
       padding-left: 66px;
@@ -862,7 +877,6 @@ html {
   position: center center;
   overflow: hidden; }
   .sect_t .sect_t_cont {
-    margin-top: 100px;
     position: relative; }
     .sect_t .sect_t_cont .hexagon:before, .sect_t .sect_t_cont .hexagon:after {
       margin-left: 0%; }
@@ -905,7 +919,6 @@ html {
   position: center center;
   overflow: hidden; }
   .sect_four .sect_four_cont {
-    margin-top: 100px;
     position: relative; }
     .sect_four .sect_four_cont .hexagon:before, .sect_four .sect_four_cont .hexagon:after {
       margin-left: 0%; }
@@ -940,7 +953,6 @@ html {
   background: url("../../img/sect_five_bg.jpg");
   overflow: hidden; }
   .sect_five .sect_five_cont {
-    margin-top: 100px;
     position: relative; }
     .sect_five .sect_five_cont .hexagon:before, .sect_five .sect_five_cont .hexagon:after {
       margin-left: 0%; }
@@ -1006,7 +1018,6 @@ html {
   overflow: hidden;
   height: 100vh; }
   .sect_six .sect_six_cont {
-    margin-top: 100px;
     position: relative;
     height: 940px; }
     .sect_six .sect_six_cont .point_hex {
