--- a/app/style/css/style.css
+++ b/app/style/css/style.css
@@ -48,6 +48,9 @@ a {
   -webkit-transition: all .5s ease-in-out;
   -o-transition: all .5s ease-in-out;
   transition: all .5s ease-in-out; }
+  @media (min-width: 992px) and (max-width: 1199px) {
+    .scroll_down {
+      bottom: -6%; } }
   .scroll_down .anime {
     -webkit-animation: MouseOn 2s ease-in-out forwards infinite;
             animation: MouseOn 2s ease-in-out forwards infinite; }
@@ -59,16 +62,19 @@ a {
     text-align: center; }
   @media (min-width: 768px) and (max-width: 991px) {
     .scroll_down {
-      bottom: -22%;
+      bottom: -29%;
       left: 47%; } }
 
 .join_us {
   position: absolute;
   bottom: 5%;
   right: 7%; }
+  @media (min-width: 992px) and (max-width: 1199px) {
+    .join_us {
+      bottom: -5%; } }
   @media (min-width: 768px) and (max-width: 991px) {
     .join_us {
-      bottom: -21%;
+      bottom: -29%;
       right: 3%; } }
 
 .info_btn {
@@ -91,6 +97,14 @@ a {
   position: absolute;
   overflow: visible;
   background: url(../../img/hex.png) 16px -2px no-repeat; }
+  @media (min-width: 768px) and (max-width: 991px) {
+    .info_btn {
+      margin: 27px 105px !important; } }
+  @media (min-width: 576px) and (max-width: 767px) {
+    .info_btn {
+      -webkit-background-size: 95px 100px;
+              background-size: 95px 100px;
+      margin: -10px 35px; } }
 
 .learn_m {
   font-size: 0.875em; }
@@ -109,6 +123,11 @@ a {
       width: 383px;
       height: 235.64px;
       margin: 93.82px 0; } }
+  @media (min-width: 576px) and (max-width: 767px) {
+    .hexagon {
+      width: 325px;
+      height: 187.64px;
+      margin: 93.82px 0; } }
 
 .hexagon:before,
 .hexagon:after {
@@ -123,11 +142,19 @@ a {
     .hexagon:after {
       border-left: 190.5px solid transparent;
       border-right: 190.5px solid transparent; } }
+  @media (min-width: 576px) and (max-width: 767px) {
+    .hexagon:before,
+    .hexagon:after {
+      border-left: 162.5px solid transparent;
+      border-right: 162.5px solid transparent; } }
 
 .hexagon:before {
   bottom: 100%;
   border-bottom: 115.47px solid #000000ab; }
   @media (min-width: 768px) and (max-width: 991px) {
+    .hexagon:before {
+      border-bottom: 93.82px solid #000000ab; } }
+  @media (min-width: 576px) and (max-width: 767px) {
     .hexagon:before {
       border-bottom: 93.82px solid #000000ab; } }
 
@@ -136,6 +163,9 @@ a {
   margin-left: -50%;
   border-top: 115.47px solid #000000ab; }
   @media (min-width: 768px) and (max-width: 991px) {
+    .hexagon:after {
+      border-top: 93.82px solid #000000ab; } }
+  @media (min-width: 576px) and (max-width: 767px) {
     .hexagon:after {
       border-top: 93.82px solid #000000ab; } }
 
@@ -147,6 +177,10 @@ a {
     .main_nav {
       top: 56%;
       right: 3%; } }
+  @media (min-width: 576px) and (max-width: 767px) {
+    .main_nav {
+      top: 56%;
+      right: -9%; } }
   .main_nav .main_nav_list {
     list-style: none;
     display: -webkit-box;
@@ -321,6 +355,12 @@ html {
       font-size: 1.125em;
       margin-left: 0px;
       margin-right: 25px; }
+      @media (min-width: 768px) and (max-width: 991px) {
+        .header .nav .nav_item {
+          display: none; } }
+      @media (min-width: 576px) and (max-width: 767px) {
+        .header .nav .nav_item {
+          display: none; } }
       .header .nav .nav_item .nav_item_hover {
         position: absolute;
         padding: 10px;
@@ -476,6 +516,9 @@ html {
       background-color: #000000ab; }
       @media (min-width: 768px) and (max-width: 991px) {
         .main_sect .main_sect_container .info_about {
+          position: relative;
+          top: 135px;
+          left: -173px;
           -webkit-transform: translate(16%, 42%);
               -ms-transform: translate(16%, 42%);
                   transform: translate(16%, 42%);
@@ -486,6 +529,9 @@ html {
           margin-top: 198px;
           padding-left: 20px;
           padding-right: 20px; } }
+      @media (min-width: 576px) and (max-width: 767px) {
+        .main_sect .main_sect_container .info_about {
+          margin-left: 0; } }
       .main_sect .main_sect_container .info_about .info_tittle {
         margin-bottom: 45px;
         font-size: 1.875em; }
@@ -493,6 +539,9 @@ html {
           .main_sect .main_sect_container .info_about .info_tittle {
             margin-bottom: 15px;
             font-size: 1.9em; } }
+        @media (min-width: 576px) and (max-width: 767px) {
+          .main_sect .main_sect_container .info_about .info_tittle {
+            margin-bottom: 15px; } }
       .main_sect .main_sect_container .info_about .info_about_text {
         height: 140px;
         overflow-x: hidden;
@@ -500,6 +549,9 @@ html {
         @media (min-width: 768px) and (max-width: 991px) {
           .main_sect .main_sect_container .info_about .info_about_text {
             height: 110px; } }
+        @media (min-width: 576px) and (max-width: 767px) {
+          .main_sect .main_sect_container .info_about .info_about_text p {
+            font-size: 12px; } }
       .main_sect .main_sect_container .info_about .info_about_text::-webkit-scrollbar {
         width: 0px; }
       @media (min-width: 768px) and (max-width: 991px) {
@@ -508,6 +560,10 @@ html {
       @media (min-width: 992px) and (max-width: 1199px) {
         .main_sect .main_sect_container .info_about .info_btn {
           margin: 2% 29%; } }
+
+@media (min-width: 1200px) {
+  .fp-tableCell {
+    height: 940px !important; } }
 
 @-webkit-keyframes animatedBackground {
   0 {
@@ -622,10 +678,10 @@ html {
       -webkit-transform: scale(1);
           -ms-transform: scale(1);
               transform: scale(1);
-      background-position-y: -130px;
+      background-position-y: -250px;
       background-position-x: 51%;
-      -webkit-background-size: 215% 215%;
-              background-size: 215%; } }
+      -webkit-background-size: 240% 240%;
+              background-size: 240%; } }
   @media (min-width: 992px) and (max-width: 1199px) {
     #balkon {
       -webkit-animation: none;
@@ -675,6 +731,11 @@ html {
       -webkit-transform: translate(-89%, 213%) scale(0.6);
           -ms-transform: translate(-89%, 213%) scale(0.6);
               transform: translate(-89%, 213%) scale(0.6); } }
+  @media (min-width: 576px) and (max-width: 767px) {
+    .ball_1 {
+      -webkit-transform: translate(-89%, 95%) scale(0.6);
+          -ms-transform: translate(-89%, 95%) scale(0.6);
+              transform: translate(-89%, 95%) scale(0.6); } }
 
 .ball_2 {
   -webkit-animation: Ball 2.9s linear forwards infinite;
@@ -686,6 +747,11 @@ html {
       -webkit-transform: translate(-93%, 217%) scale(0.6);
           -ms-transform: translate(-93%, 217%) scale(0.6);
               transform: translate(-93%, 217%) scale(0.6); } }
+  @media (min-width: 576px) and (max-width: 767px) {
+    .ball_2 {
+      -webkit-transform: translate(-93%, 82%) scale(0.6);
+          -ms-transform: translate(-93%, 82%) scale(0.6);
+              transform: translate(-93%, 82%) scale(0.6); } }
 
 .ball_3 {
   -webkit-animation: Ball 2.1s linear forwards infinite;
@@ -697,17 +763,11 @@ html {
       -webkit-transform: translate(-161%, 238%) scale(0.6);
           -ms-transform: translate(-161%, 238%) scale(0.6);
               transform: translate(-161%, 238%) scale(0.6); } }
-
-.ball_4 {
-  -webkit-animation: Ball 2.9s linear forwards infinite;
-          animation: Ball 2.9s linear forwards infinite;
-  -webkit-animation-delay: 0.5s;
-          animation-delay: 0.5s; }
-  @media (min-width: 768px) and (max-width: 991px) {
-    .ball_4 {
-      -webkit-transform: translate(-93%, 243%) scale(0.6);
-          -ms-transform: translate(-93%, 243%) scale(0.6);
-              transform: translate(-93%, 243%) scale(0.6); } }
+  @media (min-width: 576px) and (max-width: 767px) {
+    .ball_3 {
+      -webkit-transform: translate(-161%, 72%) scale(0.6);
+          -ms-transform: translate(-161%, 72%) scale(0.6);
+              transform: translate(-161%, 72%) scale(0.6); } }
 
 .ball_4 {
   -webkit-animation: Ball 2.9s linear forwards infinite;
@@ -719,6 +779,11 @@ html {
       -webkit-transform: translate(-361%, 395%) scale(0.6);
           -ms-transform: translate(-361%, 395%) scale(0.6);
               transform: translate(-361%, 395%) scale(0.6); } }
+  @media (min-width: 576px) and (max-width: 767px) {
+    .ball_4 {
+      -webkit-transform: translate(-361%, 69%) scale(0.6);
+          -ms-transform: translate(-361%, 69%) scale(0.6);
+              transform: translate(-361%, 69%) scale(0.6); } }
 
 .ball_5 {
   -webkit-animation: Ball 2.9s linear forwards infinite;
@@ -730,12 +795,15 @@ html {
       -webkit-transform: translate(-813%, 823%) scale(0.8);
           -ms-transform: translate(-813%, 823%) scale(0.8);
               transform: translate(-813%, 823%) scale(0.8); } }
+  @media (min-width: 576px) and (max-width: 767px) {
+    .ball_5 {
+      -webkit-transform: translate(-813%, -31%) scale(0.8);
+          -ms-transform: translate(-813%, -31%) scale(0.8);
+              transform: translate(-813%, -31%) scale(0.8); } }
 
 #earth_1_img {
   width: 100%;
-  top: -10%;
-  -webkit-animation: animatedBackground 7.0s linear forwards;
-          animation: animatedBackground 7.0s linear forwards; }
+  top: -10%; }
   @media (min-width: 768px) and (max-width: 991px) {
     #earth_1_img {
       -webkit-animation: none;
@@ -768,9 +836,10 @@ html {
   z-index: -1; }
   @media (min-width: 1200px) and (max-width: 1600px) {
     .earth_1 {
-      -webkit-transform: translate(0%, 34%);
-          -ms-transform: translate(0%, 34%);
-              transform: translate(0%, 34%); } }
+      -webkit-transform: translate(0%, 25%);
+          -ms-transform: translate(0%, 25%);
+              transform: translate(0%, 25%);
+      height: 100%; } }
   @media (min-width: 992px) and (max-width: 1199px) {
     .earth_1 {
       -webkit-transform: translate(0%, 53%);
