--- a/app/style/scss/_main.scss
+++ b/app/style/scss/_main.scss
@@ -42,6 +42,12 @@ html {
 			color: $white;
 			font-size: 1.125em;
 			@include marginLR(0px, 25px);
+			@include md {
+				display: none;
+			}			
+			@include sm {
+				display: none;
+			}
 			.nav_item_hover{
 				position: absolute;
 				padding: 10px;
@@ -206,15 +212,20 @@ html {
 			font-size: 0.875em;
 			text-align: center;
 			background-color: #000000ab;
-
 				@include md{
-					
-					    transform: translate(16%, 42%);
+					position: relative;
+					top: 135px;
+					left: -173px;
+					transform: translate(16%, 42%);
 					@include paddingLR(15px, 15px);
 				}
 				@include lg{
 					margin-top: 198px;
 					@include paddingLR(20px, 20px);
+				}
+			
+				@include sm {
+					margin-left: 0;	
 				}
 
 			.info_tittle{
@@ -224,6 +235,9 @@ html {
 				@include md{
 					margin-bottom: 15px;
 					font-size: 1.9em;
+				}
+				@include sm {
+					margin-bottom: 15px;
 				}
 
 
@@ -236,6 +250,11 @@ html {
     			@include md{
     				height: 110px;
     			}
+				p {
+					@include sm {
+						font-size: 12px;
+					}
+				}
 
 			}
 			.info_about_text::-webkit-scrollbar {width:0px;}
@@ -251,3 +270,8 @@ html {
 	}
 }
 
+.fp-tableCell {
+	@include xl {
+		height: 940px!important;
+	}
+}
