--- a/app/style/scss/_variabless.scss
+++ b/app/style/scss/_variabless.scss
@@ -138,6 +138,9 @@ a{
     bottom: 24px;
     left: 47%;
     transition: all .5s ease-in-out;
+	@include lg {
+		bottom: -6%;
+	}
     .anime{
     	animation: MouseOn 2s ease-in-out forwards infinite;
     	&:hover{
@@ -150,7 +153,7 @@ a{
 		text-align: center;
 	}
 	@include md{
-		bottom: -22%;
+		bottom: -29%;
     	left: 47%;
 	}
 }
@@ -159,8 +162,11 @@ a{
 	position: absolute;
     bottom: 5%;
     right: 7%;
+	@include lg {
+		bottom: -5%;
+	}
     @include md{
-    	bottom: -21%;
+    	bottom: -29%;
     	right: 3%;
     }
 
@@ -168,7 +174,7 @@ a{
 
 //learnBtn
 
-.info_btn{
+.info_btn {
 	width: 146px;
     height: 125px;
     margin: 10px 79px;
@@ -179,7 +185,14 @@ a{
    	position: absolute;
     overflow: visible;
     background: url(../../img/hex.png) 16px -2px no-repeat;
+	@include md {
+		margin: 27px 105px!important;
 	}
+	@include sm {
+		background-size: 95px 100px;
+		margin: -10px 35px
+	}
+}
 .learn_m{
 	@extend %USHText;
 	font-size: 0.875em;
@@ -191,47 +204,61 @@ a{
 
 //hexagon
 .hexagon{
-	position: relative;
-	width: 432px; 
-	height: 249.42px;
-	background-color: #000000ab;
-	margin: 115.47px 0;
-	@include md{
-	  	width: 383px;
-	  	height: 235.64px;
-		margin: 93.82px 0;
-	  	}
-	}
+  position: relative;
+  width: 432px; 
+  height: 249.42px;
+  background-color: #000000ab;
+  margin: 115.47px 0;
+  @include md{
+      width: 383px;
+      height: 235.64px;
+    margin: 93.82px 0;
+      }
+  @include sm{
+    width: 325px; 
+      height: 187.64px;
+      margin: 93.82px 0;
+    }
+  }
 .hexagon:before,
 .hexagon:after {
-	content: "";
-	position: absolute;
-	width: 0;
-	border-left: 216px solid transparent;
-	border-right: 216px solid transparent;
-	margin-left: -50%;
-	@include md{
-		border-left: 190.5px solid transparent;
-  		border-right: 190.5px solid transparent;
-	}
+  content: "";
+  position: absolute;
+  width: 0;
+  border-left: 216px solid transparent;
+  border-right: 216px solid transparent;
+  margin-left: -50%;
+  @include md{
+    border-left: 190.5px solid transparent;
+      border-right: 190.5px solid transparent;
+  }
+  @include sm{
+    border-left: 162.5px solid transparent;
+      border-right: 162.5px solid transparent;
+  }
 }
 
 .hexagon:before {
-	bottom: 100%;
-	border-bottom: 115.47px solid #000000ab;
-	@include md{
-		border-bottom: 93.82px solid #000000ab;
-	}
+  bottom: 100%;
+  border-bottom: 115.47px solid #000000ab;
+  @include md{
+    border-bottom: 93.82px solid #000000ab;
+  }
+  @include sm{
+    border-bottom: 93.82px solid #000000ab;
+  }
 }
 .hexagon:after {
-	top: 100%;
-	margin-left: -50%;
-	border-top: 115.47px solid #000000ab;
-	@include md{
-		border-top: 93.82px solid #000000ab;
-	}
+  top: 100%;
+  margin-left: -50%;
+  border-top: 115.47px solid #000000ab;
+  @include md{
+    border-top: 93.82px solid #000000ab;
+  }
+  @include sm{
+    border-top: 93.82px solid #000000ab;
+  }
 }
-
 .main_nav{ 
 	@extend %USHText;
 	position: absolute;
@@ -241,6 +268,10 @@ a{
     	top: 56%;
     	right: 3%;
     }
+	@include sm {
+		top: 56%;
+		right: -9%;
+	}
 	.main_nav_list{
 		list-style: none;
 		display: flex;
