--- a/app/style/scss/_sect_five.scss
+++ b/app/style/scss/_sect_five.scss
@@ -19,7 +19,7 @@
 			margin-right: 60px;
 		}
 		.t_hex_info{
-			@extend %USBText;
+			@extend %RobotoText;
 			color: $white;
 			font-size: 0.875em;
 			margin-top: -5px;
