--- a/app/style/scss/_sect_four.scss
+++ b/app/style/scss/_sect_four.scss
@@ -1,7 +1,7 @@
 .sect_four{
 	height: 100vh;
 	color: $white;
-	@extend %USBText;
+	@extend %RobotoText;
 	background: url('../../img/sect_four_bg.jpg') no-repeat;
 	position: center center;
 	overflow: hidden;
@@ -28,7 +28,8 @@
 			margin-left: 35px;
 		}
 		.hex_4{
-			.hex_tittle{@extend %USHText;
+			.hex_tittle{
+				@extend %USHText;
 			}
 			transform: translate(130%, -48%);
 		}
