--- a/app/style/scss/_sect_six.scss
+++ b/app/style/scss/_sect_six.scss
@@ -63,6 +63,7 @@
 			}
 		}
 		.hex_1{
+			
 			position: absolute;
 			top: 27%;
 			left: 9%;
@@ -72,7 +73,7 @@
 				left: 26%;
 			}
 			.t_hex_info{
-				@extend %USBText;
+				@extend %RobotoText;
 				color: $white;
 				font-size: 0.875em;
 				margin-top: -5px;
