--- a/app/style/scss/_main.scss
+++ b/app/style/scss/_main.scss
@@ -243,7 +243,7 @@ html {
 
 			}
 			.info_about_text{
-				@extend %USBText;
+				@extend %RobotoText;
 				height: 140px;
 				overflow-x: hidden;
     			overflow-y: scroll;
