--- a/app/style/scss/_sect_six.scss
+++ b/app/style/scss/_sect_six.scss
@@ -72,7 +72,7 @@
 				left: 26%;
 			}
 			.t_hex_info{
-				@extend %USBText;
+				@extend %RobotoText;
 				color: $white;
 				font-size: 0.875em;
 				margin-top: -5px;
